# Ex_ProgrammingLab_Note

./: CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  NoteCounter.cpp  NoteCounter.h  Observer.h  Subject.h  main.cpp
GoogleTests/: CMakeLists.txt  CollectionTest.cpp  NoteCounterTest.cpp  NoteTest.cpp  runAllTests.cpp
GoogleTests/GoogleTestsLib/: CMakeLists.txt
GoogleTests/GoogleTestsLib/googletest-main/: CONTRIBUTING.md
GoogleTests/GoogleTestsLib/googletest-main/.github/ISSUE_TEMPLATE/: config.yml
GoogleTests/GoogleTestsLib/googletest-main/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md
GoogleTests/GoogleTestsLib/googletest-main/docs/reference/: actions.md  assertions.md
GoogleTests/GoogleTestsLib/googletest-main/googlemock/: CMakeLists.txt
GoogleTests/GoogleTestsLib/googletest-main/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
GoogleTests/GoogleTestsLib/googletest-main/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc  (+2 more)
GoogleTests/GoogleTestsLib/googletest-main/googletest/: CMakeLists.txt
(+38 files in other folders)
